[gd_scene load_steps=3 format=2]

[ext_resource path="res://lobby/lobby.gd" type="Script" id=1]
[ext_resource path="res://lobby/waiting_room.tscn" type="PackedScene" id=2]

[node name="Lobby" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.027451, 0.129412, 0.133333, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 345.0
margin_top = 217.0
margin_right = 678.0
margin_bottom = 383.0
custom_constants/separation = 15
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 333.0
margin_bottom = 14.0
text = "Ruang Tunggu"
align = 1
valign = 1

[node name="GridContainer" type="GridContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 29.0
margin_right = 333.0
margin_bottom = 131.0
custom_constants/vseparation = 15
custom_constants/hseparation = 15
columns = 2

[node name="NamaLabel" type="Label" parent="CenterContainer/VBoxContainer/GridContainer"]
margin_top = 5.0
margin_right = 68.0
margin_bottom = 19.0
text = "Nama"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameTextBox" type="LineEdit" parent="CenterContainer/VBoxContainer/GridContainer"]
margin_left = 83.0
margin_right = 333.0
margin_bottom = 24.0
rect_min_size = Vector2( 250, 0 )
text = "Masukan Nickname kamu"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IPLabel" type="Label" parent="CenterContainer/VBoxContainer/GridContainer"]
margin_top = 44.0
margin_right = 68.0
margin_bottom = 58.0
text = "IP Ruang"
align = 1

[node name="IPTextBox" type="LineEdit" parent="CenterContainer/VBoxContainer/GridContainer"]
margin_left = 83.0
margin_top = 39.0
margin_right = 333.0
margin_bottom = 63.0
rect_min_size = Vector2( 250, 0 )
text = "Masukan IP ruangan"
align = 1

[node name="LabelTextBox" type="Label" parent="CenterContainer/VBoxContainer/GridContainer"]
margin_top = 83.0
margin_right = 68.0
margin_bottom = 97.0
text = "Port Ruang"
align = 1

[node name="PortTextBox" type="LineEdit" parent="CenterContainer/VBoxContainer/GridContainer"]
margin_left = 83.0
margin_top = 78.0
margin_right = 333.0
margin_bottom = 102.0
rect_min_size = Vector2( 250, 0 )
text = "Port ruangan"
align = 1

[node name="joinBtn" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 146.0
margin_right = 333.0
margin_bottom = 166.0
text = "Join Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WaitingRoom" parent="." instance=ExtResource( 2 )]
visible = false

[node name="ColorRect" parent="WaitingRoom" index="0"]
color = Color( 0, 0.298039, 0.282353, 1 )

[node name="VBoxContainer" parent="WaitingRoom/CenterContainer" index="0"]
margin_top = 171.0
margin_bottom = 428.0

[node name="ItemList" parent="WaitingRoom/CenterContainer/VBoxContainer" index="1"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_bottom = 222.0
items = [ "Player 1", null, false, "Player 2", null, false, "Player 3", null, false, "Player 4", null, false ]

[node name="readyBtn" parent="WaitingRoom/CenterContainer/VBoxContainer" index="2"]
margin_top = 237.0
margin_bottom = 257.0

[connection signal="text_changed" from="CenterContainer/VBoxContainer/GridContainer/NameTextBox" to="." method="_on_NameTextBox_text_changed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/joinBtn" to="." method="_on_joinBtn_pressed"]
[connection signal="pressed" from="WaitingRoom/CenterContainer/VBoxContainer/readyBtn" to="." method="_on_readyBtn_pressed"]

[editable path="WaitingRoom"]
